# System_Integration

./: .gitignore
0.2_Text-based_Data_Formats/: me.csv  me.txt
00._Data_parsing_server_Part_II/: 00._Data_parsing_server_Part_II.md  app.js  package-lock.json  package.json
01_introduction/: index.html  paymentiframe.html
01a [Individual] Data parsing servers - Part I/: 01a._Data_parsing_server_Part_I.md  data_parsing.js  data_parsing.py
01a_[Individual]_Data_parsing_servers_-_Part_I/: data_parsing.py
02_Text-based_Data_Formats/: me.json  me.xml  me.yaml
03_Modules/html_classic/: index.html  index.js  myModule.js
03_Modules/html_esmodules/: myModule.js
03_Modules/node_commonjs/: index.js  myModule.js
03_Modules/node_esmodules/: index.js  myModule.js
03_Modules/python_main/: library_importer.py  potential_library.py
03_Modules/python_modules/: main.py
03a_[Individual] Data parsing server - Part III/01_node/: app.js
03a_[Individual] Data parsing server - Part III/02_python/: main.py
03a_[Individual]_Data_parsing_server_-_Part_III/: 03a._Data_parsing_server_Part_III.md
03a_[Individual]_Data_parsing_server_-_Part_III/01_node/: app.js  package.json
03a_[Individual]_Data_parsing_server_-_Part_III/02_python/: pyproject.toml
04_Encode_Decode/01_node/: index.js
04_Encode_Decode/02_python/: main.py
04a [Individual] SSE Example/: 04a._SSE_example.md
04a_[Individual]_SSE_Example/01_node/: app.js  package.json
04b [Pair] Database granular data access/: 04b._Database_granular_data_access.md
04b_[Pair]_Database_granular_data_access/Exposee_Documentation/: readme.md
04b_[Pair]_Database_granular_data_access/Integrator_Screenshots/: readme.md
05_Python_Virtual_Environments/: main.py
05_Python_Virtual_Environments/03_poetry/: main.py  pyproject.toml
06_Simple_Servers/01_node/: app.js  package-lock.json  package.json
06_Simple_Servers/02_python/: main.py  pyproject.toml
06a_WebSocket_Example/: client.js  package-lock.json  package.json  server.js
08_Server-Server/01_node/: app.js  package-lock.json  package.json
08_Server-Server/02_python/: main.py  pyproject.toml
08a_[Individual]_WebRTC_Example/01_WebRTC/: style.css
08b_Generate_code_documentation_for_your_DLS_project/: README.md
08c_[Individual]_WebRTC_Example/01_WebRTC/: main.js  package-lock.json
08d_Generate_code_documentation_for_your_DLS_project/: README.md
09_Environment_Variables/01_node/: index.js  package-lock.json  package.json
09_Environment_Variables/02_python/: .env.template  pyproject.toml
10_Date/01_node/: index.js
10_Date/02_python/: main.py
10a_[Individual]_Document_A_Database/: README.md
10b_Migrate_Database/01_node_knex/: package.json
11_Short_Polling/01_node/: app.js
11a_Auth_Integration/: package-lock.json  package.json  readme.md  server.js
11a_Auth_Integration/public/: index.html  script.js
11b_[Individual]_Integrate_with_payment/: package-lock.json  package.json  readme.md
12a_Webhook_System/: README.md  app.js  package-lock.json  package.json  webhooks.json
13_Server-sent_events/02_python/: main.py  pyproject.toml
13_Server-sent_events/02_python/templates/: index.html
13a_[Individual]_GraphQL/: package.json
14_WebSocket/02_python_plain/: client.py  pyproject.toml  server.py
14_WebSocket/03_python_fastapi/: connection_manager.py  main.py  pyproject.toml
18_CORS/: index.html
19_Multipart_Forms/: index.html
20_Base64_images/: index.html
21_Audio/: index.html
22_MPEG-DASH/: app.js  package-lock.json  package.json
23_Embedded_Youtube/: embeddedyoutube.html
25_GitHub_Webhooks/02_python/: main.py  pyproject.toml
27_Web_Scraping_Web_Crawling/02_python_wiki_page_web_scraping/: main.py  pyproject.toml
(+75 files in other folders)
