[project]
name = "02-python-plain"
version = "0.1.0"
description = ""
authors = [
    {name = "Wei Yang",email = "weix0015@stud.kea.dk"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "websockets (>=15.0.1,<16.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
